src/Safetynet/Safetynet.css
.autoql-vanilla-safetynet-selector{
    position: absolute;
    visibility: hidden;
    background: inherit;
    background: var(--chata-drawer-background-color);
    color: var(--chata-drawer-text-color-primary);
    padding: 5px 0;
    letter-spacing: .03em;
    font-family: sans-serif;
    z-index: 9999;
    border: 1px solid hsla(0,0%,67.1%,.32);
    border-radius: 4px;
    box-shadow: 0 0 8px rgba(0,0,0,.15);
    transition: opacity .2s ease 0s!important;
    opacity: 0;
    cursor: default;
    width: auto;
    max-height: 300px;
    overflow-y: auto;
}

.autoql-vanilla-safetynet-selector ul{
    padding: 0px !important;
    margin: 0px !important;

}

.autoql-vanilla-safetynet-selector ul li{
    cursor: pointer;
    height: unset;
    font-size: 14px;
    line-height: 24px;
    padding: 0 15px;
}

.autoql-vanilla-safetynet-selector ul li:hover{
    background: rgba(0,0,0,.05);
}

.autoql-vanilla-safetynet-selector ul li:last-of-type {
    color: #d84830;
}

